--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "serialize",
-  "version": "0.0.0",
+  "version": "0.2.28",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
+  },
+  "author": "Miikka Mättölä",
+  "license": "GPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/6461/serialize.git"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -15,5 +23,8 @@
     "pug": "2.0.0-beta11",
     "xml-js": "^1.6.11",
     "yaml": "^1.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
